# ToodeeSculpt

./: .gitignore  CMakeLists.txt  README.md  ToodeeSculpt  shader_bin  shader_bin_output.txt
doc/: renderer.md
examples/: anxiete.tds  bird.tds  bonhomme_alexie.tds  cat.tds  coffee.tds  crab.tds  frog.tds  glace.tds  hand.tds  icecream.tds  libellule.tds  panda.tds  poisson_chapeau.tds  poisson_clément.tds  poisson_coffre.tds  tree.tds  tropical_fish.tds  voiture_alexie.tds
palettes/: cl8uds.hex  nanner-jam.hex
project/GPU2DComposer.xcodeproj/: project.pbxproj
project/GPU2DComposer/GPU2DComposer/: main.cpp
project/GPU2DComposer/GPU2DComposer.xcodeproj/: project.pbxproj
project/GPU2DComposer/GPU2DComposer.xcodeproj/project.xcworkspace/xcuserdata/geolm.xcuserdatad/: UserInterfaceState.xcuserstate
project/GPU2DComposer/GPU2DComposer.xcodeproj/xcuserdata/geolm.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: App.cpp  App.h  DynamicBuffer.h  Editor.cpp  Editor.h  Icons.cpp  Icons.h  Metal.cpp  Metal.hpp  MetalApp.h  MetalApp.mm  MetalLayerHelper.h  MetalLayerHelper.mm  MouseCursors.cpp  MouseCursors.h  PrimitivesStack.cpp  PrimitivesStack.h  ShapesStack.cpp  ShapesStack.h  icons.c  icons.h  main.cpp  main.mm  shader_bin.c  shader_reader.c  shader_reader.h  tile_bin.metal
src/editor/: BaseEditor.h  Editor.cpp  Editor.h  EditorInterface.h  Primitive.cpp  Primitive.h  PrimitiveEditor.cpp  PrimitiveEditor.h  PrimitivesStack.cpp  PrimitivesStack.h  color_box.c  color_box.h  export.c  export.h  primitive.c  primitive.h  primitive_base.c  primitive_base.h  primitive_list.c  primitive_list.h  shadertoy.glsl  tds.h
src/renderer/: DynamicBuffer.h  Metal.hpp  MetalLayerHelper.mm  Renderer.cpp  Renderer.h  commitmono_21_31.h  crenderer.cpp  crenderer.h  font9x16.c  font9x16.h  renderer.h
src/shaders/: binning.h  binning.metal  collision.h  common.h  font.h  operators.h  rasterizer.h  rasterizer.metal  sdf.h  shadertoy_boilerplate.glsl  shadertoy_boilerplate.h  tile_bin.metal  transform.metal
src/system/: PushArray.h  Singleton.h  aabb.h  arc.c  arc.h  biarc.c  biarc.h  bin2h.c  bin2h.h  cc.h  color.c  color.h  color_ramp.h  file_buffer.c  file_buffer.h  float16.h  format.c  format.h  hash.c  hash.h  inside.c  inside.h  microui.c  microui.h  miniz.h  na16_palette.h  ortho.c  ortho.h  palettes.c  palettes.h  point_in.c  point_in.h  psmooth.c  psmooth.h  random.h  serializer.h  spng.c  stateless.h  undo.c  undo.h  (+1 more)
src/tools/: binarize.c  shader_bin.c
